FIX: Logo on Mobile
Stop stretching logo on mobile

--- a/_sass/_my-styles.scss
+++ b/_sass/_my-styles.scss
@@ -134,3 +134,8 @@ video {
 	align-items: center;
 	justify-content: center;
 }
+
+// LOGO
+img.header__logo__img {
+	width: auto !important;
+}
